--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "chart.js": "^3.6.0",
+    "debounce": "^1.2.1",
     "firebase": "^9.2.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.2",
