--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "debounce": "^1.2.1",
     "firebase": "^9.2.0",
     "framer-motion": "^4.1.17",
-    "next": "12.0.2",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2"
